--- a/html-css/simple.html
+++ b/html-css/simple.html
@@ -15,7 +15,7 @@
         height: 200px;
         width: 400px;
         background-color: black;
-        transition: 300ms linear;
+        transition: 1s linear;
       }
     </style>
   </head>
