--- a/js/basics/index.html
+++ b/js/basics/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
   </head>
   <body>
+    <ul id="list">
+      <li class="listitem">Item 1</li>
+      <li class="listitem">Item 2</li>
+      <li class="listitem">Item 3</li>
+      <li class="listitem">Item 4</li>
+    </ul>
     <script src="./basics.js"></script>
   </body>
 </html>
